[gd_scene load_steps=2 format=3 uid="uid://gameui001"]

[ext_resource type="Script" path="res://scenes/ui/GameUI.gd" id="1"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ResourcesPanel" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RublesLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/ResourcesPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "600₽"

[node name="LivesLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/ResourcesPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "20♥"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WaveInfo" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 8

[node name="WaveLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/WaveInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Wave 0/6"
horizontal_alignment = 2

[node name="MiddleSection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameArea" type="Control" parent="MarginContainer/VBoxContainer/MiddleSection"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SidePanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MiddleSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MiddleSection/SidePanel"]
layout_mode = 2
text = "Build Towers:"

[node name="TowerButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MiddleSection/SidePanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GuardTowerBtn" type="Button" parent="MarginContainer/VBoxContainer/MiddleSection/SidePanel/TowerButtons"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "Guard Tower
100₽"

[node name="PropagandaBtn" type="Button" parent="MarginContainer/VBoxContainer/MiddleSection/SidePanel/TowerButtons"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "Propaganda
150₽"

[node name="BureaucracyBtn" type="Button" parent="MarginContainer/VBoxContainer/MiddleSection/SidePanel/TowerButtons"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "Bureaucracy
200₽"

[node name="MissileBtn" type="Button" parent="MarginContainer/VBoxContainer/MiddleSection/SidePanel/TowerButtons"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
text = "Missiles
300₽"

[node name="BottomBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 20

[node name="StartWaveBtn" type="Button" parent="MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "START WAVE"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/BottomBar"]
layout_mode = 2
text = "Speed:"

[node name="Speed1x" type="Button" parent="MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "1x"

[node name="Speed2x" type="Button" parent="MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "2x"

[node name="Speed4x" type="Button" parent="MarginContainer/VBoxContainer/BottomBar"]
custom_minimum_size = Vector2(60, 40)
layout_mode = 2
text = "4x"
